# rust-cli

./: README.md
grrs/: Cargo.toml
grrs/src/: main.rs
grrs/tests/: cli.rs
