[package]
name = "grrs"
version = "0.1.0"
authors = ["David Seidenberg <david.seidenberg@pubnub.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.13"
log = "0.4.11"

anyhow = "1.0"
env_logger = "0.8.2"
clap-verbosity-flag = "0.3.1"

[dev-dependencies]
assert_cmd = "0.10"
predicates = "1"
tempfile = "3"
